(front): fix error modal appears behind other modals

--- a/client/src/common/style/index.scss
+++ b/client/src/common/style/index.scss
@@ -223,7 +223,7 @@ body {
 	right: 0;
 	bottom: 0;
 	width: 100vw;
-	z-index: 9999;
+	z-index: 999;
 	.panel {
 		box-shadow: 0 3px 12px $gray-1;
 		margin: auto;
